--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
+    "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^5.0.0-beta3",
     "next": "11.1.2",
     "react": "17.0.2",
